# grace

./: .git-blame-ignore-revs  .gitignore  .ocamlformat  CHANGELOG.md  LICENSE  Makefile  README.md  dune-project  flake.nix  fmt_doc.opam  grace.opam  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  opam-ci.yml
examples/: dune  main.ml
lib/: dune
lib/ansi_renderer/: config.ml  dune  grace_ansi_renderer.ml  grace_ansi_renderer.mli  import.ml  snippet.ml  snippet.mli  snippet_renderer.ml
lib/core/: diagnostic.ml  diagnostic.mli  dune  file.ml  files.ml  grace.ml  grace.mli  grace_core.ml  grace_core.mli  grace_text.ml  import.ml  index.ml  index.mli  range.ml  range.mli  source.ml  source.mli  text.ml
lib/json_conv/: dune  grace_json_conv.ml  grace_json_conv.mli
lib/rendering/: ansi.ml  config.ml  diagnostic_to_snippet.ml  dune  grace_rendering.ml  grace_rendering.mli  import.ml  renderer.ml  snippet.ml  snippet.mli  source_reader.ml  view.ml
lib/source_reader/: dune  grace_source_reader.ml  grace_source_reader.mli
lib/std/: array.ml  binary_search.ml  char.ml  comparable.ml  dune  format.ml  grace_std.ml  grace_std0.ml  hashtbl.ml  identifiable.ml  int.ml  int64.ml  list.ml  option.ml  pretty_printer.ml  string.ml  utf8.ml
lib/text/: dune  grace_text.ml  grace_text.mli
nix/: grace.nix  overlay.nix
scripts/: commit-msg-hook.sh  install-hooks.sh  pre-commit-hook.sh
test/ansi_renderer/: dune  test_ansi_renderer.ml
test/core/: dune  import.ml  test_files.ml  test_range.ml  test_source.ml
test/json_conv/: dune  (+1 more)
(+6 files in other folders)
